correctin bash command

--- a/01_Create_s3_bucket.ipynb
+++ b/01_Create_s3_bucket.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\\\\bash\n",
+    "%%bash\n",
     "\n",
     "aws s3 ls s3://${bucket}/"
    ]
