correction1 on 02_Seaborn plots

--- a/02_Seaborn_Matrix_plots.ipynb
+++ b/02_Seaborn_Matrix_plots.ipynb
@@ -84,21 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_R' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-e3268153d714>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_R\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_R' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Take a look of the first 5 lines for properties sales in Reading (England)\n",
     "df_R.head()"
@@ -130,7 +118,7 @@
    "outputs": [],
    "source": [
     "#A different approach using apply() method and a python lambda function:\n",
-    "df_R['Month'] = df_R['Date'].apply(lambda s:s.split('-')[1]"
+    "df_R['Month'] = df_R['Date'].apply(lambda s:s.split('-')[1])"
    ]
   },
   {
